feat. banner PC 화면

--- a/index.html
+++ b/index.html
@@ -80,6 +80,197 @@
           </div>
         </div>
       </header>
+      <main class="main">
+        <section class="banner">
+          <div class="banner__container">
+            <div class="banner__large-banner-container">
+              <div class="banner__large-banner">
+                <div class="large-banner__img">
+                  <a href="#" class="large-banner__link">
+                    <img
+                      src="./img/first-section/Rectangle-8-1-1-1.png"
+                      alt=""
+                      class="product-1-img"
+                  /></a>
+                </div>
+                <div class="large-banner__info">
+                  <h4 class="large-banner__category">New In</h4>
+                  <h3 class="large-banner__title">
+                    문선, 신규 입점 기념 10% 할인
+                  </h3>
+                  <a href="#" class="large-banner__more">Read More</a>
+                </div>
+              </div>
+              <div class="banner__large-banner">
+                <div class="large-banner__img">
+                  <a href="#" class="large-banner__link">
+                    <img
+                      src="./img/first-section/Rectangle-8-1-1-1.png"
+                      alt=""
+                      class="product-1-img"
+                  /></a>
+                </div>
+                <div class="large-banner__info">
+                  <h4 class="large-banner__category">New In</h4>
+                  <h3 class="large-banner__title">
+                    문선, 신규 입점 기념 10% 할인
+                  </h3>
+                  <a href="#" class="large-banner__more">Read More</a>
+                </div>
+              </div>
+              <div class="banner__large-banner">
+                <div class="large-banner__img">
+                  <a href="#" class="large-banner__link">
+                    <img
+                      src="./img/first-section/Rectangle-8-1-1-1.png"
+                      alt=""
+                      class="product-1-img"
+                  /></a>
+                </div>
+                <div class="large-banner__info">
+                  <h4 class="large-banner__category">New In</h4>
+                  <h3 class="large-banner__title">
+                    문선, 신규 입점 기념 10% 할인
+                  </h3>
+                  <a href="#" class="large-banner__more">Read More</a>
+                </div>
+              </div>
+              <div class="banner__large-banner">
+                <div class="large-banner__img">
+                  <a href="#" class="large-banner__link">
+                    <img
+                      src="./img/first-section/Rectangle-8-1-1-1.png"
+                      alt=""
+                      class="product-1-img"
+                  /></a>
+                </div>
+                <div class="large-banner__info">
+                  <h4 class="large-banner__category">New In</h4>
+                  <h3 class="large-banner__title">
+                    와일드띵스 22 봄, 여름 4차 딜리버리 발매
+                  </h3>
+                  <a href="#" class="large-banner__more">Read More</a>
+                </div>
+              </div>
+              <div class="banner__large-banner">
+                <div class="large-banner__img">
+                  <a href="#" class="large-banner__link">
+                    <img
+                      src="./img/first-section/Rectangle-8-1-1-1.png"
+                      alt=""
+                      class="product-1-img"
+                  /></a>
+                </div>
+                <div class="large-banner__info">
+                  <h4 class="large-banner__category">New In</h4>
+                  <h3 class="large-banner__title">
+                    문선, 신규 입점 기념 10% 할인
+                  </h3>
+                  <a href="#" class="large-banner__more">Read More</a>
+                </div>
+              </div>
+            </div>
+            <div class="divider"></div>
+            <div class="banner__small-banner-container">
+              <div class="banner__small-banner">
+                <div class="small-banner__img">
+                  <a href="#" class="small-banner__link">
+                    <img
+                      src="./img/first-section/Rectangle-12-2-5.png"
+                      alt=""
+                      class="product-6-img"
+                  /></a>
+                </div>
+                <div class="small-banner__info-wrapper">
+                  <div class="small-banner__info">
+                    <h4 class="small-banner__category">New In</h4>
+                    <h3 class="small-banner__title">
+                      살로몬 XT-4 새로운 컬러 발매
+                    </h3>
+                    <a href="#" class="small-banner__more">Read More</a>
+                  </div>
+                </div>
+              </div>
+              <div class="banner__small-banner">
+                <div class="small-banner__img">
+                  <a href="#" class="small-banner__link">
+                    <img
+                      src="./img/first-section/Rectangle-15-4-5.png"
+                      alt=""
+                      class="product-6-img"
+                  /></a>
+                </div>
+                <div class="small-banner__info-wrapper">
+                  <div class="small-banner__info">
+                    <h4 class="small-banner__category">New In</h4>
+                    <h3 class="small-banner__title">
+                      IDEA 신규 모자 제품 입고
+                    </h3>
+                    <a href="#" class="small-banner__more">Read More</a>
+                  </div>
+                </div>
+              </div>
+              <div class="banner__small-banner">
+                <div class="small-banner__img">
+                  <a href="#" class="small-banner__link">
+                    <img
+                      src="./img/first-section/Rectangle-14@2x-1-5.png"
+                      alt=""
+                      class="product-6-img"
+                  /></a>
+                </div>
+                <div class="small-banner__info-wrapper">
+                  <div class="small-banner__info">
+                    <h4 class="small-banner__category">Sale</h4>
+                    <h3 class="small-banner__title">
+                      에리즈 22SS 컬렉션 타임세일
+                    </h3>
+                    <a href="#" class="small-banner__more">Read More</a>
+                  </div>
+                </div>
+              </div>
+              <div class="banner__small-banner">
+                <div class="small-banner__img">
+                  <a href="#" class="small-banner__link">
+                    <img
+                      src="./img/first-section/Rectangle-16-1-4.png"
+                      alt=""
+                      class="product-6-img"
+                  /></a>
+                </div>
+                <div class="small-banner__info-wrapper">
+                  <div class="small-banner__info">
+                    <h4 class="small-banner__category">New In</h4>
+                    <h3 class="small-banner__title">
+                      코스트 퍼 킬로 22 봄, 여름 컬랙션 판매
+                    </h3>
+                    <a href="#" class="small-banner__more">Read More</a>
+                  </div>
+                </div>
+              </div>
+              <div class="banner__small-banner">
+                <div class="small-banner__img">
+                  <a href="#" class="small-banner__link">
+                    <img
+                      src="./img/first-section/Rectangle-13-4-6.png"
+                      alt=""
+                      class="product-6-img"
+                  /></a>
+                </div>
+                <div class="small-banner__info-wrapper">
+                  <div class="small-banner__info">
+                    <h4 class="small-banner__category">Special Sale</h4>
+                    <h3 class="small-banner__title">
+                      와일드띵스 22SS 티셔츠 스페셜 할인
+                    </h3>
+                    <a href="#" class="small-banner__more">Read More</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
     </div>
   </body>
 </html>
