--- a/index.html
+++ b/index.html
@@ -270,6 +270,83 @@
             </div>
           </div>
         </section>
+        <section class="spotlight">
+          <h1 class="spotlight__title">스포트라이트</h1>
+          <div class="spotlight__contaner">
+            <div class="spotlight__item">
+              <div class="spotlight-item__img">
+                <a href="spotlight-item__img-link">
+                  <img src="./img/spotlight/Rectangle-17-1-1-1.png" alt="" />
+                </a>
+              </div>
+              <div class="spotlight-item__info">
+                <div class="spotlight-item__thumbnail">
+                  <img src="./img/spotlight/worst_banner.jpg" alt="" />
+                </div>
+                <h4 class="spotlight-item__brand">WORST SKATESHOP</h4>
+                <a href="#" class="spotlight-item__name-link"
+                  ><h3 class="spotlight-item__name">
+                    SK8 Star S/S Tee - Light Blue
+                  </h3></a
+                >
+              </div>
+            </div>
+            <div class="spotlight__item">
+              <div class="spotlight-item__img">
+                <a href="spotlight-item__img-link">
+                  <img src="./img/spotlight/Rectangle-18-2-4.png" alt="" />
+                </a>
+              </div>
+              <div class="spotlight-item__info">
+                <div class="spotlight-item__thumbnail">
+                  <img src="./img/spotlight/1.jpg" alt="" />
+                </div>
+                <h4 class="spotlight-item__brand">WORST SKATESHOP</h4>
+                <a href="#" class="spotlight-item__name-link"
+                  ><h3 class="spotlight-item__name">
+                    SK8 Star S/S Tee - Light Blue
+                  </h3></a
+                >
+              </div>
+            </div>
+            <div class="spotlight__item">
+              <div class="spotlight-item__img">
+                <a href="spotlight-item__img-link">
+                  <img src="./img/spotlight/Rectangle-19-5-1.png" alt="" />
+                </a>
+              </div>
+              <div class="spotlight-item__info">
+                <div class="spotlight-item__thumbnail">
+                  <img src="./img/spotlight/WildThings.jpg" alt="" />
+                </div>
+                <h4 class="spotlight-item__brand">WORST SKATESHOP</h4>
+                <a href="#" class="spotlight-item__name-link"
+                  ><h3 class="spotlight-item__name">
+                    SK8 Star S/S Tee - Light Blue
+                  </h3></a
+                >
+              </div>
+            </div>
+            <div class="spotlight__item">
+              <div class="spotlight-item__img">
+                <a href="spotlight-item__img-link">
+                  <img src="./img/spotlight/Rectangle-20-2-3.png" alt="" />
+                </a>
+              </div>
+              <div class="spotlight-item__info">
+                <div class="spotlight-item__thumbnail">
+                  <img src="./img/spotlight/IDEA.jpg" alt="" />
+                </div>
+                <h4 class="spotlight-item__brand">WORST SKATESHOP</h4>
+                <a href="#" class="spotlight-item__name-link"
+                  ><h3 class="spotlight-item__name">
+                    SK8 Star S/S Tee - Light Blue
+                  </h3></a
+                >
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
     </div>
   </body>
