feat. curation PC 화면

--- a/index.html
+++ b/index.html
@@ -347,6 +347,215 @@
             </div>
           </div>
         </section>
+        <section class="curation">
+          <div class="curation__container">
+            <h1 class="curation__title">큐레이션</h1>
+            <div class="curation__item-container">
+              <div class="curation__item">
+                <div class="curation-item__img">
+                  <a href="#" class="curation-item__img-link"
+                    ><img src="./img/curation/Rectangle-22.png" alt="" class=""
+                  /></a>
+                </div>
+                <div class="curation-item__info">
+                  <h3 class="curation-item__title">봄을 위한 새로운 아이템</h3>
+                  <p class="curation-item__desc">
+                    새로운 계절은 위한 스프링 아이템, 10% 추가 할인
+                  </p>
+                  <div class="curation__product">
+                    <div class="product__thumbnail">
+                      <a href="#"
+                        ><img src="./img/curation/01-3.jpg" alt=""
+                      /></a>
+                    </div>
+                    <div class="product__info">
+                      <h3 class="product__name">
+                        Mens Cotton V-Neck Cardigan - Ecru
+                      </h3>
+                      <h4 class="product__brand">Amomento</h4>
+                    </div>
+                  </div>
+                  <div class="curation__product">
+                    <div class="product__thumbnail">
+                      <a href="#"
+                        ><img src="./img/curation/02-2.jpg" alt=""
+                      /></a>
+                    </div>
+                    <div class="product__info">
+                      <h3 class="product__name">WT Camp Apron - Tan</h3>
+                      <h4 class="product__brand">Wild Things</h4>
+                    </div>
+                  </div>
+                  <div class="curation__product">
+                    <div class="product__thumbnail">
+                      <a href="#"
+                        ><img src="./img/curation/03-2.jpg" alt=""
+                      /></a>
+                    </div>
+                    <div class="product__info">
+                      <h3 class="product__name">Arro 16 Backpack - Black</h3>
+                      <h4 class="product__brand">Arcteryx</h4>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="curation__item">
+                <div class="curation-item__img">
+                  <a href="#" class="curation-item__img-link"
+                    ><img src="./img/curation/Rectangle-65.png" alt="" class=""
+                  /></a>
+                </div>
+                <div class="curation-item__info">
+                  <h3 class="curation-item__title">
+                    와일드띵스 티셔츠 프로모션
+                  </h3>
+                  <p class="curation-item__desc">
+                    와일드띵스의 그래픽 티셔츠를 소개합니다. 20% 할인된 가격에
+                    구매하실 수 있습니다.
+                  </p>
+                  <div class="curation__product">
+                    <div class="product__thumbnail">
+                      <a href="#"
+                        ><img src="./img/curation/01-2.jpg" alt=""
+                      /></a>
+                    </div>
+                    <div class="product__info">
+                      <h3 class="product__name">wild Plants S/S Tee - Cream</h3>
+                      <h4 class="product__brand">Whild Things</h4>
+                    </div>
+                  </div>
+                  <div class="curation__product">
+                    <div class="product__thumbnail">
+                      <a href="#"
+                        ><img src="./img/curation/02-1.jpg" alt=""
+                      /></a>
+                    </div>
+                    <div class="product__info">
+                      <h3 class="product__name">Fishing Spot S/S Tee - Sand</h3>
+                      <h4 class="product__brand">Wild Things</h4>
+                    </div>
+                  </div>
+                  <div class="curation__product">
+                    <div class="product__thumbnail">
+                      <a href="#"
+                        ><img src="./img/curation/03-1.jpg" alt=""
+                      /></a>
+                    </div>
+                    <div class="product__info">
+                      <h3 class="product__name">
+                        New Hampshire S/S Tee - Brown
+                      </h3>
+                      <h4 class="product__brand">Whild Things</h4>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="curation__item">
+                <div class="curation-item__img">
+                  <a href="#" class="curation-item__img-link"
+                    ><img src="./img/curation/minibag.jpg" alt="" class=""
+                  /></a>
+                </div>
+                <div class="curation-item__info">
+                  <h3 class="curation-item__title">봄을 위한 새로운 아이템</h3>
+                  <p class="curation-item__desc">
+                    새로운 계절은 위한 스프링 아이템, 10% 추가 할인
+                  </p>
+                  <div class="curation__product">
+                    <div class="product__thumbnail">
+                      <a href="#"
+                        ><img src="./img/curation/01-1.jpg" alt=""
+                      /></a>
+                    </div>
+                    <div class="product__info">
+                      <h3 class="product__name">
+                        Mens Cotton V-Neck Cardigan - Ecru
+                      </h3>
+                      <h4 class="product__brand">Amomento</h4>
+                    </div>
+                  </div>
+                  <div class="curation__product">
+                    <div class="product__thumbnail">
+                      <a href="#"><img src="./img/curation/02.jpg" alt="" /></a>
+                    </div>
+                    <div class="product__info">
+                      <h3 class="product__name">
+                        Mens Cotton V-Neck Cardigan - Ecru
+                      </h3>
+                      <h4 class="product__brand">Amomento</h4>
+                    </div>
+                  </div>
+                  <div class="curation__product">
+                    <div class="product__thumbnail">
+                      <a href="#"><img src="./img/curation/03.jpg" alt="" /></a>
+                    </div>
+                    <div class="product__info">
+                      <h3 class="product__name">
+                        Mens Cotton V-Neck Cardigan - Ecru
+                      </h3>
+                      <h4 class="product__brand">Amomento</h4>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="curation__item">
+                <div class="curation-item__img">
+                  <a href="#" class="curation-item__img-link"
+                    ><img
+                      src="./img/curation/Rectangle-22-1.png"
+                      alt=""
+                      class=""
+                  /></a>
+                </div>
+                <div class="curation-item__info">
+                  <h3 class="curation-item__title">봄을 위한 새로운 아이템</h3>
+                  <p class="curation-item__desc">
+                    새로운 계절은 위한 스프링 아이템, 10% 추가 할인
+                  </p>
+                  <div class="curation__product">
+                    <div class="product__thumbnail">
+                      <a href="#"
+                        ><img src="./img/curation/1-3.jpeg" alt=""
+                      /></a>
+                    </div>
+                    <div class="product__info">
+                      <h3 class="product__name">
+                        Mens Cotton V-Neck Cardigan - Ecru
+                      </h3>
+                      <h4 class="product__brand">Amomento</h4>
+                    </div>
+                  </div>
+                  <div class="curation__product">
+                    <div class="product__thumbnail">
+                      <a href="#"
+                        ><img src="./img/curation/2-2.jpeg" alt=""
+                      /></a>
+                    </div>
+                    <div class="product__info">
+                      <h3 class="product__name">
+                        Mens Cotton V-Neck Cardigan - Ecru
+                      </h3>
+                      <h4 class="product__brand">Amomento</h4>
+                    </div>
+                  </div>
+                  <div class="curation__product">
+                    <div class="product__thumbnail">
+                      <a href="#"
+                        ><img src="./img/curation/3-2.jpeg" alt=""
+                      /></a>
+                    </div>
+                    <div class="product__info">
+                      <h3 class="product__name">
+                        Mens Cotton V-Neck Cardigan - Ecru
+                      </h3>
+                      <h4 class="product__brand">Amomento</h4>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
     </div>
   </body>
