feat. editorial PC 화면

--- a/index.html
+++ b/index.html
@@ -556,6 +556,116 @@
             </div>
           </div>
         </section>
+        <section class="editorial">
+          <div class="editorial__container">
+            <div class="editorial__title-container">
+              <h1 class="editorial__title">에디토리얼</h1>
+              <a href="#" class="editorial__more">View All</a>
+            </div>
+            <div class="editorial__item-container">
+              <!-- editorial item 1 -->
+              <div class="editorial__item">
+                <div class="editorial-item__img">
+                  <a href="#" class="editorial-item__link">
+                    <img
+                      src="./img/editorial/3d6a765eeef54c5f43c88dda24b35517.jpg"
+                      alt=""
+                    />
+                  </a>
+                </div>
+                <div class="editorial-item__info">
+                  <a href="" class="editorial-item__title">
+                    <span>HEIGHTS x Oasis Records Capsule Collection</span>
+                  </a>
+                  <p class="editorial-item__desc">
+                    오아시스 레코드 x 하이츠 스토어 캡슐 컬렉션
+                  </p>
+                  <a href="#" class="editorial-item__more">Read More</a>
+                </div>
+              </div>
+              <!-- editorial item 2 -->
+              <div class="editorial__item">
+                <div class="editorial-item__img">
+                  <a href="#" class="editorial-item__link">
+                    <img
+                      src="./img/editorial/2f00ee56cf8dd4c2b4b245d0a2a32eff.jpg"
+                      alt=""
+                    />
+                  </a>
+                </div>
+                <div class="editorial-item__info">
+                  <a href="" class="editorial-item__title">
+                    <span>Recap : AECA WHITE "Balance shop" POP-Up</span>
+                  </a>
+                  <p class="editorial-item__desc">
+                    에이카 화이트 22 봄, 여름 시즌 팝업스토어 오픈
+                  </p>
+                  <a href="#" class="editorial-item__more">Read More</a>
+                </div>
+              </div>
+              <!-- editorial item 3 -->
+              <div class="editorial__item">
+                <div class="editorial-item__img">
+                  <a href="#" class="editorial-item__link">
+                    <img
+                      src="./img/editorial/4ffbd43af7b1731531f1385c907c9e36.jpg"
+                      alt=""
+                    />
+                  </a>
+                </div>
+                <div class="editorial-item__info">
+                  <a href="" class="editorial-item__title">
+                    <span>Vandy the Pink with Kid Milli</span>
+                  </a>
+                  <p class="editorial-item__desc">
+                    반디 더 핑크 5주년 발매제품 에디토리얼
+                  </p>
+                  <a href="#" class="editorial-item__more">Read More</a>
+                </div>
+              </div>
+              <!-- editorial item 4 -->
+              <div class="editorial__item">
+                <div class="editorial-item__img">
+                  <a href="#" class="editorial-item__link">
+                    <img
+                      src="./img/editorial/fb178fb7216e924199a75741df161370.jpg"
+                      alt=""
+                    />
+                  </a>
+                </div>
+                <div class="editorial-item__info">
+                  <a href="" class="editorial-item__title">
+                    <span>Salomon Advanced</span>
+                  </a>
+                  <p class="editorial-item__desc">
+                    살로몬을 대표하는 스니커트 XT-WINGS 2, XT-4
+                  </p>
+                  <a href="#" class="editorial-item__more">Read More</a>
+                </div>
+              </div>
+              <!-- editorial item 5 -->
+              <div class="editorial__item">
+                <div class="editorial-item__img">
+                  <a href="#" class="editorial-item__link">
+                    <img
+                      src="./img/editorial/b553e717f11ce7ed7ad68303c5591c14.jpg"
+                      alt=""
+                    />
+                  </a>
+                </div>
+                <div class="editorial-item__info">
+                  <a href="" class="editorial-item__title">
+                    <span>Recap : SanSan Gear SS22 Pre-View</span>
+                  </a>
+                  <p class="editorial-item__desc">
+                    산산기어 22 봄, 여름 컬렉션 프리뷰 스토어
+                  </p>
+                  <a href="#" class="editorial-item__more">Read More</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
     </div>
   </body>
